--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="refresh"
-      content="0; url=https://antarezaghifary.github.io/src/index.html"
+      content="0; url=https://antarezaghifary.github.io/portfolio-slicing-web-travel/src/index.html"
     />
     <title>Document</title>
   </head>
