--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
           <div class="grid grid-cols-12 items-center">
             <div class="lg:col-span-4 col-span-12 flex gap-4 flex-col">
                   <span class="text-pink font-bold leading-tight text-center lg:text-start text-base sm:text-2xl">SERVICE</span>
-                  <h1 class="font-bold sm:text-5xl text-3xl leading-tight text-textnav text-center">Our top value categories for you</h1>
+                  <h1 class="font-bold sm:text-5xl text-3xl leading-tight text-textnav text-center lg:text-start">Our top value categories for you</h1>
             </div>
             <div class="lg:col-span-8 col-span-12 flex flex-col sm:flex-row gap-3 lg:w-screen sm:w-full sm:mt-16 lg:mt-0 mt-8 justify-center items-center">
                 <div class="drop-shadow-lg-shadow flex justify-center lg:gap-4 p-10 flex-col items-center  sm:w-full rounded-[32px] border lg:p-16  bg-white">
